--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/drei": "^9.121.4",
     "@react-three/fiber": "^8.17.12",
     "@tailwindcss/vite": "^4.0.0",
+    "ethers": "^6.13.5",
     "framer-motion": "^12.0.6",
     "maath": "^0.10.8",
     "react": "^18.3.1",
