--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/vite": "^4.0.0",
     "ethers": "^6.13.5",
     "framer-motion": "^12.0.6",
+    "gsap": "^3.12.7",
     "maath": "^0.10.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
